# virtualenv

./: reproduce_issue.sh  solution.sh
docs/changelog/: 2074a.feature.rst
src/virtualenv/activation/: via_template.py
src/virtualenv/activation/cshell/: __init__.py  activate.csh
src/virtualenv/activation/fish/: __init__.py  activate.fish
src/virtualenv/activation/nushell/: activate.nu
src/virtualenv/cache/: __init__.py  file_cache.py
src/virtualenv/create/via_global_ref/: venv.py
src/virtualenv/discovery/: README.md  builtin.py  cached_py_info.py  py_info.py  pyproject.toml
src/virtualenv/discovery/windows/: __init__.py
src/virtualenv/seed/wheels/embed/: __init__.py
tests/: conftest.py
tests/integration/: test_zipapp.py
tests/unit/activation/: test_bash.py  test_batch.py  test_cshell.py  test_fish.py  test_nushell.py  test_powershell.py
tests/unit/config/: test_env_var.py
tests/unit/create/: conftest.py  test_creator.py
tests/unit/create/via_global_ref/builtin/: test_venv.py
tests/unit/discovery/py_info/: test_py_info.py  test_py_info_exe_based_of.py
tests/unit/seed/wheels/: test_periodic_update.py  test_wheels_util.py
