[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "virtualenv-discovery"
version = "0.0.1"
description = "A library to discover Python interpreters."
readme = "README.md"
license = "MIT"
authors = [
  { name = "Bernat Gabor", email = "gaborjbernat@gmail.com" },
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "platformdirs",
]

[project.urls]
Homepage = "https://github.com/pypa/virtualenv"
